<resources>
    <string name="vs_motto">"Beyond Transparency"</string>
    <string name="app_name">Nyererefy</string>
    <string name="title_elections">Elections</string>
    <string name="title_surveys">Surveys</string>
    <string name="title_news">News</string>

    <!--Test Strings-->
    <string name="test_name">Julius Msova</string>
    <string name="test_school">BAED</string>
    <string name="test_time">2 h</string>
    <string name="add_comment">Add comment</string>

    <!--Alerts-->
    <string name="error">Some error occurred! Try again later</string>
    <string name="failed_connect">Failed to connect to the server! Try again later</string>
    <string name="voted">You have already voted for this category.</string>
    <string name="voting_disabled">Voting is closed right now!</string>
    <string name="no_candidates">No candidates found in this category!</string>
    <string name="on_success_vote">Thanks for your vote!</string>
    <string name="cant_vote_twice">You can not vote twice!</string>
    <string name="on_failure_vote">Some error occurred. Try again later!</string>
    <string name="alert_account_disabled">Your account is disabled. Contact Election Committee!</string>
    <string name="alert_account_not_activated">Your account is not activated. Visit konektedi.com to activate it.</string>
    <string name="alert_account_not_verified">Your account is not verified. Visit konektedi.com to verify it.</string>
    <string name="alert_account_not_approved">Your account has not been approved.</string>
    <string name="wrong_password_or_reg">Incorrect Registration number or Password.</string>

    <!--Top Menu-->
    <string name="settings_activity">Settings</string>
    <string name="logout_activity">Logout</string>
    <string name="about_activity">About</string>
    <string name="support_activity">Support</string>
    <string name="profile_activity">Profile</string>

    <!--Settings-->
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-.</string>
    <string name="username_changed">Username successfully changed.</string>
    <string name="username_taken">Username is taken.Choose another one</string>
    <string name="same_username">Username must be different from previous.</string>
    <string name="invalid_name">Name must have 1 to 21 characters.</string>
    <string name="invalid_username">Username must have 1 to 16 characters.</string>
    <string name="invalid_password">Pin must be 4 digits</string>
    <string name="invalid_characters">Only - , . and _ characters are allowed.</string>
    <string name="new_username">New Username</string>
    <string name="password_should_not_match">New Password must not match with previous.</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="change_username">Change Username</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="error_occurred">Error occurred. Try again later.</string>
    <string name="error_500">The service is unavailable. Make sure you have working internet connection and latest App update.</string>


    <!--Buttons-->
    <string name="vote">Vote</string>


    <!--Home Buttons-->
    <string name="live_results">Live Results</string>
    <string name="live_votes">Live Votes</string>
    <string name="live_reviews">Live Reviews</string>
    <string name="statistics">Statistics</string>

    <!--TEST -->
    <string name="test_title">CUHAS ORGANIZATIONS GENERAL ELECTION 2020</string>
    <string name="title_activity_election_view">ElectionView</string>
    <string name="title_activity_results_view">ResultsView</string>

    <!--RESULTS VIEW-->
    <string name="choose_category_texts">Choose category</string>
    <string name="title_activity_motion_view">MotionView</string>

    <!--PETITIONS-->
    <string name="participate">Participate</string>
    <string name="noCount">No Counts</string>
    <string name="yesCount">Yes Counts</string>
    <string name="opinionsCount">Opinions Counts</string>
    <string name="title_activity_candidates">Candidates</string>

    <string name="title_activity_candidate_profile">CandidateProfile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_participate">Participate</string>
    <string name="title_activity_opinions">Opinions</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_reg_no"> Registration number</string>
    <string name="prompt_password"> Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Save changes</string>
    <string name="save">Save</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="help">Need Help?</string>
    <string name="error_invalid_reg_no">This Registration number is invalid</string>
    <string name="error_empty_password">Pin must not be empty</string>
    <string name="error_less_password">Password must contain at least 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_news_view">NewsView</string>

    <!--About strings-->
    <string name="vs_about_title">Nyererefy App</string>
    <string name="vs_about_version">Version: 2018.1</string>
    <string name="vs_property_of">Property of Konektedi</string>

    <!--Support Strings-->
    <string name="connections">Connections</string>
    <string name="support_title">Support</string>
    <string name="help_us">Your word could make VS better</string>
    <string name="follow_konektedi">Follow Konektedi</string>
    <string name="follow_developer">Follow Nyererefy</string>
    <string name="email_us">Email us</string>
    <string name="whatsapp_us">WhatsApp us</string>
    <string name="support_rate_us">Rate this App</string>

    <!--MotionViewActivity Strings-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="add_opinion">Add optional opinion</string>

    <!--Action bar titles-->
    <string name="motion">Motion</string>
    <string name="news">News</string>
    <string name="opinions">Opinions</string>
    <string name="title_activity_futa">Futa</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="retry">Retry</string>
    <string name="title_activity_connections">Connections</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="made_with">Made with Love, Kotlin and Java.</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="unknown_error">Unknown error occurred Try again later</string>
    <string name="no_category">No category found</string>
    <string name="add_review">Add review on this Category</string>
    <string name="image">Image</string>
    <string name="imageButton">imageButton</string>
    <string name="review_added">Review added successfully</string>
    <string name="email_or_username">Email or Username</string>
    <string name="cover_changed">Cover changed successfully</string>
    <string name="refresh">Refresh</string>
    <string name="opinion_added">Opinion added successfully</string>
    <string name="title_more">Profile</string>
    <string name="categories">Categories</string>
    <string name="stats">Statistics</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="change_dp">Change Image</string>
    <string name="type_bio">Type bio here</string>
    <string name="about_me">Bio</string>
    <string name="bio_updated">Biography updated successfully</string>
    <string name="no_network">No network</string>
    <string name="server_client_id">888907700282-akq10n9hvdrft4e7pnsj3fqrs73ar9f1.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Login with Google</string>
    <string name="by_creating_an_account">By login you are agree with our</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="confirm_voting_msg">You are about to vote for</string>
    <string name="enter_password_to_proceed">Please enter your pin to proceed.</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_activity_setup">Account Setup</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="reg_no">Registration Number</string>
    <string name="continue_">Continue</string>
    <string name="klass">Class</string>
    <string name="data_confirmation">Data Confirmation</string>
    <string name="setup">Setup</string>
    <string name="confirm_msg">The information below should reflect your <b>registration number</b> as well
        as <b>class</b>. If it is correct click confirm otherwise please contact your university/college\'s
        Nyererefy Bridge administrator.\n<b>Note</b> After confirming account your data will no
        longer receive changes via Nyererefy Bridge.
    </string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_bio">Bio must not be empty</string>

    <string name="candidates">Candidates</string>
    <string name="votes_and_reviews">Votes and Reviews</string>
    <string name="type_review">Type ..</string>
    <string name="connecting">Connecting....</string>
    <string name="connected">Connected</string>
    <string name="failed_to_subscribe">Failed to subscribe</string>
    <string name="login_to_post_review">Sign in to post</string>
    <string name="login_to_vote">Sign in to vote</string>

    <string name="developers">Developers</string>

    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_to_nyererefy">Welcome to Nyererefy</string>
    <string name="terms_of_service">Terms of Service and Privacy Policy</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="live_results_disabled">Real-time votes count is currently disabled for this category. All counts will
    be released immediately when election is closed</string>
    <string name="default_notification_channel_id">Default</string>

</resources>
