<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_activity"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/logout_activity"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/about_activity"
        app:showAsAction="never" />
</menu>