<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <ProgressBar
        android:indeterminate="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:digits="@string/myAlphaNumeric"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_login_input"
        android:hint="@string/new_username"
        android:inputType="text" />

    <Button
        android:id="@+id/changeBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_primary"
        android:text="@string/save_changes"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>