<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".Student.Login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reg_no_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/vs_motto"
                android:textAlignment="center"
                android:textSize="16sp" />


            <View
                android:id="@+id/separatorOne"
                style="@style/SeparatorLine"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/wrongPasswordOrRegView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/bootstrapDanger"
                android:layout_marginBottom="2dp"
                android:visibility="gone"
                android:text="@string/vs_motto"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/reg_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_login_input"
                android:drawableLeft="@drawable/ic_reg_no"
                android:drawableStart="@drawable/ic_reg_no"
                android:hint="@string/prompt_reg_no"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_login_input"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/reg_no_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>